cluster/gitops/downloads/qbittorrent/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent
specs:
  - description: qbittorrent
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/instance: qbittorrent
        app.kubernetes.io/controller: qbittorrent
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts: &webservice_ports
          - ports:
              - port: "8080"
                protocol: TCP
      # Gateway to webservice
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts: *webservice_ports
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8090"
                protocol: TCP
      # From qBittorrent clients (radarr, sonarr, nzbhydra2, etc.)
      - fromEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/qbittorrent-client: "true"
            matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
        toPorts: *webservice_ports
